# jenkins-swe6-testing

./: .gitignore  .gitlab-ci.yml  Dockerfile.jenkins  Jenkinsfile  Jenkinsfile.hardware  Makefile  README.md  Readme.md  bcm_matrix.dbc  deploy_bcm.sh  docker-compose.yml  monitor.py  pytest.ini  requirements.txt  test-results.xml  test_math_operations.py
.agents/workflows/: link-bitbucket.md
allure-report/: index.html
allure-report/data/: behaviors.csv  behaviors.json  categories.json  packages.json  suites.csv  suites.json  timeline.json
allure-report/export/: influxDbData.txt  prometheusData.txt
allure-report/history/: categories-trend.json  duration-trend.json  history.json  retry-trend.json
allure-report/widgets/: categories-trend.json  duration-trend.json  executors.json  severity.json  (+4 more)
bcm/: CMakeLists.txt  Makefile
bcm/include/: bcm_cfg.h  bcm_iface.h  bcm_types.h
bcm/src/: bcm_abs.c  bcm_core.c  bcm_diag.c  bcm_ebd.c  bcm_hsa.c  bcm_hwmon.c  bcm_internal.h  bcm_regen.c  bcm_safety.c  bcm_wiping_rain.c
bcm/test/: test_bcm.c
doc/: PRACTICE.md
docs/: architecture.md
firmware/: Makefile  linker.ld
functional_tests/: conftest.py  test_hil_brake_controller.py  test_unified_bcm.py
scripts/: bench_certification.py  check_identity.py  comm_stress_test.py  deploy_bcm.sh  launch_jenkins.sh  misra_check.py  mock_lauterbach.py  mock_polarion_server.py  nominal_comm_check.py  polarion_upload.py  quality_suite.py  smoke_test.py
src/: main.c
tests/: conftest.py  test_brake_controller.py  test_hil_brake_controller.py
unit_tests/: test_brake_logic.c
(+149 files in other folders)
